# login_sign

./: CMakeLists.txt  LICENSE  README.md  build.bat
src/: main.cpp  version.rc
src/resources/: privatekey.pem  publickey.pem
